--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -39,6 +39,8 @@ jobs:
       run: |
         
         git clone --depth=1 https://github.com/jifei881121/dirlist /opt/dirlist
+        cd /opt/dirlist
+        tar -czvf dirlist1.4.tar.gz /opt/dirlist/
              
     - name: Generate release tag
       id: tag
