--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -39,9 +39,9 @@ jobs:
       run: |
         
         git clone --depth=1 https://github.com/jifei881121/dirlist /opt/dirlist
+        cd /opt/dirlist
         tar -czvf dirlist1.4.tar.gz /opt/dirlist/
-        cp dirlist1.4.tar.gz /opt/dirlist/
-             
+                     
     - name: Generate release tag
       id: tag
       if: env.UPLOAD_RELEASE == 'true' && !cancelled()
